--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-index
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <script src="app.js"></script>
+</head>
+
+<body>
+    <h1>Webpack ES6 - Babel and Transpilers </h1>
+</body>
+
+</html>
